# flip_to_ones

./: CMakeLists.txt  README.md
src/: flipToOnes.cpp
test/: flipToOnes_test.cpp
